Fixes left margin of inspector palettes.
Fixes z-index of inspector palettes so it appears above the component expander thumb.

--- a/v3/src/components/inspector-panel.scss
+++ b/v3/src/components/inspector-panel.scss
@@ -7,7 +7,7 @@ $inspector-panel-width: 50px;
   top: 0;
   width: $inspector-panel-width;
   min-height: 50px;
-  z-index: 10;  // Will need to be higher to accommodate Leaflet
+  z-index: 50;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -96,7 +96,7 @@ $inspector-panel-width: 50px;
   .palette-form {
     position: relative;
     left: 0;
-    margin: 5px 0 10px 20px;
+    margin: 5px 0 10px 10px;
     background-color: #EEE;
     height: fit-content;
 
@@ -104,7 +104,6 @@ $inspector-panel-width: 50px;
       flex-direction: row;
       align-items: center;
       height: 20px;
-      margin: 5px;
       white-space: nowrap;
 
       &.color-picker-row {
@@ -160,7 +159,7 @@ $inspector-panel-width: 50px;
         display: inline-block;
         font-size: 12px;
         margin-right: 10px;
-        padding: 2px 5px;
+        // padding: 2px 5px;
         width: 40px;
       }
     }
