--- a/v3/src/components/slider/inspector-panel/slider-settings-panel.scss
+++ b/v3/src/components/slider/inspector-panel/slider-settings-panel.scss
@@ -5,7 +5,7 @@
     flex-direction: row;
     align-items: center;
     height: 24px;
-    margin: 5px;
+    margin: 5px 5px 5px 0;
     white-space: nowrap;
     label {
       height: inherit;
